--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,18 @@
             "email": "breno_douglas@hotmail.com"
         }
     ],
+    
+    "require": {
+         "composer/composer": "1.0.*@dev",
+         "php" : ">=5.3"
+    },
+    
     "autoload" : {
         "psr-0" : {
             "Base"  : "src/"
         }
     },
+
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
