--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
     "require": {
         "composer/composer": "1.0.*@dev",
         "php" : ">=5.3",
+        
+    },
+    "require-dev": {
         "doctrine/common": "2.4.*",
         "doctrine/dbal": "2.4.1",
         "doctrine/orm": "2.4.1",
         "symfony/yaml": "2.*"
     },
-    
     "autoload" : {
         "psr-0" : {
             "Base"  : "src/"
