--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     
     "require": {
         "composer/composer": "1.0.*@dev",
-        "php" : ">=5.3",
+        "php" : ">=5.3"
         
     },
     "require-dev": {
