--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     
     "require": {
         "php" : ">=5.3",
+        "composer/composer": "1.0.*@dev",
         "doctrine/common": "2.4.*",
         "doctrine/dbal": "2.4.1",
         "doctrine/orm": "2.4.1",
